ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sandbox
  name: websites-ingress
  annotations:
    # Required annotations
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip #instance better?

    # attache SSL certs here so server can be accessed over HTTPS
    # alb.ingress.kubernetes.io/certificate-arn: acm-cert-arn # "comma" separated `stringList`

    # Optional, if you would like to serve 80 port as well
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - http:
        paths:
          - path: "/blue"
            pathType: Prefix
            backend:
              service:
                name: blue-alb
                port:
                  number: 80
          - path: "/red"
            pathType: Prefix
            backend:
              service:
                name: red-alb
                port:
                  number: 80
